--- a/Proyecto2/App.xaml
+++ b/Proyecto2/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="A_WebBrowser_SO.App"
+﻿<Application x:Class="Proyecto2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:A_WebBrowser_SO"
+             xmlns:local="clr-namespace:Proyecto2"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
