--- a/Proyecto2/MainWindow.xaml
+++ b/Proyecto2/MainWindow.xaml
@@ -6,23 +6,25 @@
         xmlns:local="clr-namespace:Proyecto2"
         mc:Ignorable="d"
         Title="MainWindow" Height="768" Width="1368">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="223*"/>
-            <ColumnDefinition Width="4*"/>
-        </Grid.ColumnDefinitions>
-        <Button x:Name="btnVolver" Content="&lt;" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="30" Click="btnAtras_Click"/>
-        <Button x:Name="btnAdelante" Content="&gt;" HorizontalAlignment="Left" Margin="60,10,0,0" VerticalAlignment="Top" Width="30" Click="btnAdelante_Click"/>
-        <TextBox x:Name="txtUrl" HorizontalAlignment="Left" Height="19" Margin="115,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="1098" KeyDown="KeyPress"/>
-        <Button x:Name="btnIr" Content="Ir" HorizontalAlignment="Left" Margin="1218,10,0,0" VerticalAlignment="Top" Width="29" Click="btnIr_Click"/>
-        <Button x:Name="btnNuevaTab" Content="Nueva pestaña" HorizontalAlignment="Left" Margin="1252,10,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2" Click="btnNuevaTab_Click"/>
-        <TabControl x:Name="tabContenedor" HorizontalAlignment="Left" Height="647" Margin="10,81,0,0" VerticalAlignment="Top" Width="1342" Grid.ColumnSpan="2" SelectionChanged="change_URL">
-            <TabItem x:Name="tabInicio" Header="Inicio">
-                <WebBrowser x:Name="webBrowser" HorizontalAlignment="Left" Height="649" Margin="0,-3,0,0" VerticalAlignment="Top" Width="1336"/>
-            </TabItem>
-        </TabControl>
-        <Button x:Name="btnDeleteTab" Grid.ColumnSpan="2" Content="Eliminar pestaña" HorizontalAlignment="Left" Margin="1252,34,0,0" VerticalAlignment="Top" Width="100" Click="btnDeleteTab_Click"/>
-        <Button x:Name="btnHistorial" Content="Ver historial" HorizontalAlignment="Left" Margin="1252,58,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2" Click="btnHistorial_Click"/>
+	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="223*"/>
+			<ColumnDefinition Width="4*"/>
+		</Grid.ColumnDefinitions>
+		<TabControl x:Name="tabContenedor" HorizontalAlignment="Left" Height="647" Margin="10,81,0,0" VerticalAlignment="Top" Width="1342" Grid.ColumnSpan="2" SelectionChanged="change_URL">
+			<TabItem x:Name="tabInicio" Header="Inicio">
+				<WebBrowser x:Name="webBrowser" HorizontalAlignment="Left" Height="649" Margin="0,-3,0,0" VerticalAlignment="Top" Width="1336"/>
+			</TabItem>
+		</TabControl>
+		<ToolBar Height="81" VerticalAlignment="Top" Grid.ColumnSpan="2">
+			<Button x:Name="btnVolver" Content="&lt;" HorizontalAlignment="Left" VerticalAlignment="Center" Width="30" Click="btnAtras_Click" Background="LightGray"/>
+			<Button x:Name="btnAdelante" Content="&gt;" HorizontalAlignment="Left" VerticalAlignment="Center" Width="30" Click="btnAdelante_Click" Background="LightGray"/>
+			<TextBox x:Name="txtUrl" HorizontalAlignment="Left" Height="19" TextWrapping="Wrap" VerticalAlignment="Center" Width="998" KeyDown="KeyPress" />
+			<Button x:Name="btnIr" Content="Ir" HorizontalAlignment="Left" VerticalAlignment="Center" Width="29" Click="btnIr_Click" Background="LightGray"/>
+			<Button x:Name="btnNuevaTab" Content="Nueva pestaña" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.ColumnSpan="2" Click="btnNuevaTab_Click" Background="LightGray"/>
+			<Button x:Name="btnDeleteTab" Grid.ColumnSpan="2" Content="Eliminar pestaña" HorizontalAlignment="Left" VerticalAlignment="Center" Click="btnDeleteTab_Click" Background="LightGray"/>
+			<Button x:Name="btnHistorial" Content="Ver historial" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.ColumnSpan="2" Click="btnHistorial_Click" Background="LightGray"/>
+		</ToolBar>
 
-    </Grid>
+	</Grid>
 </Window>
